--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </p>
     </div>
 
-    <div id="footer"><h3 class="titolo"><a href="brescia.html">&#127968; Pagina Principale</a></h3></div>
+    <div id="footer"><h3 class="titolo"><a href="index.html">&#127968; Pagina Principale</a></h3></div>
     <p id="crediti">2024 - Luca Rozzini</p>
 </body>
 </html>
