--- a/museoSantaGiulia.html
+++ b/museoSantaGiulia.html
@@ -33,7 +33,7 @@
          <center><img src="MuseoSantaGiulia.jpg" alt="Museo di Santa Giulia"></center>
     </div>
     
-    <div id="footer"><h3 class="titolo"><a href="brescia.html">&#127968; Pagina Principale</a></h3></div>
+    <div id="footer"><h3 class="titolo"><a href="index.html">&#127968; Pagina Principale</a></h3></div>
     <p id="crediti">2024 - Luca Rozzini</p>
 </body>
 </html>
