--- a/piazzaDelDuomo.html
+++ b/piazzaDelDuomo.html
@@ -31,7 +31,7 @@
         <center><img src="PiazzaDelDuomo.jpg" alt="Piazza del Duomo"></center>
     </div>
     
-    <div id="footer"><h3 class="titolo"><a href="brescia.html">&#127968; Pagina Principale</a></h3></div>
+    <div id="footer"><h3 class="titolo"><a href="index.html">&#127968; Pagina Principale</a></h3></div>
     <p id="crediti">2024 - Luca Rozzini</p>
 </body>
 </html>
