--- a/piazzaVittoria.html
+++ b/piazzaVittoria.html
@@ -32,7 +32,7 @@
         <center><img src="PiazzaVittoria.jpg" alt="Piazza Vittoria"></center>
     </div>
     
-    <div id="footer"><h3 class="titolo"><a href="brescia.html">&#127968; Pagina Principale</a></h3></div>
+    <div id="footer"><h3 class="titolo"><a href="index.html">&#127968; Pagina Principale</a></h3></div>
     <p id="crediti">2024 - Luca Rozzini</p>
 </body>
 </html>
