--- a/piazzaDelDuomo.html
+++ b/piazzaDelDuomo.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head> 
     <title>Piazza del Duomo</title>
-    <link rel="icon" href="iconaBrescia.ico">
+    <link rel="icon" href="iconaBrescia.png">
     <link rel="stylesheet" href="brescia.css">
 </head>
 <body>
